--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,17 @@ name = "gitlab-migrator"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "gitlab_migrator"
 
 [dependencies]
+futures = "0.3.21"
+lazy_static = "1.4.0"
+reqwest = { version = "0.11.10", features = ["json"] }
+reqwest-middleware = "0.1.6"
+reqwest-retry = "0.1.5"
+tokio = { version = "1", features = ["full"] }
