--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ path = "src/main.rs"
 name = "gitlab_migrator"
 
 [dependencies]
+dotenv = "0.15.0"
 futures = "0.3.21"
 lazy_static = "1.4.0"
 reqwest = { version = "0.11.10", features = ["json"] }
 reqwest-middleware = "0.1.6"
 reqwest-retry = "0.1.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
