--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name = "gitlab_migrator"
 [dependencies]
 dotenv = "0.15.0"
 futures = "0.3.21"
+itertools = "0.10.3"
 lazy_static = "1.4.0"
 reqwest = { version = "0.11.10", features = ["json"] }
 reqwest-middleware = "0.1.6"
