--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ dotenv = "0.15.0"
 futures = "0.3.21"
 itertools = "0.10.3"
 lazy_static = "1.4.0"
-reqwest = { version = "0.11.10", features = ["json"] }
+reqwest = { version = "0.11.10", features = ["blocking", "json", "multipart"] }
 reqwest-middleware = "0.1.6"
 reqwest-retry = "0.1.5"
 serde = { version = "1.0", features = ["derive"] }
